// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryRuleCustomData expects to render multiple items 1`] = `
<div
  className="ais-QueryRuleCustomData"
>
  <section
    key="Image 1"
  >
    <img
      alt="Image 1"
      src="image-1.png"
    />
  </section>
  <section
    key="Image 2"
  >
    <img
      alt="Image 2"
      src="image-2.png"
    />
  </section>
</div>
`;

exports[`QueryRuleCustomData expects to render the empty container with empty items 1`] = `
<div
  className="ais-QueryRuleCustomData"
/>
`;

exports[`QueryRuleCustomData expects to render with custom className 1`] = `
<div
  className="ais-QueryRuleCustomData CustomClassName"
/>
`;
